# MultiObjectiveOptimizationFork

./: configs.json  pyproject.toml  sample.json
multi_task/: datasets.py  min_norm_solvers.py  min_norm_solvers_numpy.py  model_selector.py  train_multi_task.py
multi_task/loaders/: celeba_loader.py  cityscapes_loader.py
multi_task/models/: multi_lenet.py
