[tool.poetry]
name = "multiobjectiveoptimization"
version = "0.1.0"
description = ""
authors = ["Matthieu <matthieu.buotdelepine@odaia.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tensorboardX = "^2.6.2.2"
click = "^8.1.7"
torchvision = "^0.15.2"
tqdm = "^4.66.1"
scipy = "^1.11.2"
Pillow = "^10.0.0"
torch = "^2.0.1"
matplotlib = "^3.7.2"
imageio = "^2.31.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
